--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout submodules
-      uses: srt32/git-actions@v0.0.3
+    - name: Checkout
+      uses: actions/checkout@master
+    - uses: srt32/git-actions@v0.0.3
       with:
         args: git submodule update --init --recursive
     - name: update
