--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,7 @@ jobs:
     - name: update
       run: sudo apt-get update
     - name: install
-      run: sudo apt-get install -y libboost-all-dev git 
-    - name: submodule
-      run: git submodule update --init --recursive
+      run: sudo apt-get install -y libboost-all-dev rapidjson-dev
     - name: cmake
       run: cmake -H. -BRelease
     - name: build
